# GLFun

./: .gitignore  .luarc.json  .nvim-dap.lua  CMakeLists.txt  README.md  buildProc.sh  imLazy.sh  runProc.sh  todo.txt
.cache/clangd/index/: camera.h.AA924DD7D6EB62CF.idx  m33.h.8AC7D5503358A469.idx  m44.h.6542CA5597593775.idx  main.cpp.46CA4E6933032874.idx  pipeline.cpp.D1479DC126DCE864.idx  pipeline.h.68C40895119E9FB8.idx  scene.h.D5CB8215379E70F9.idx  shaderUtil.cpp.09EBD33AF8E00C53.idx  shaderUtil.h.0075690174A5BC1D.idx  tm.h.54676E37D21FD52E.idx  v3.h.1A499A237C9437E6.idx  v4.h.56EBB57944CC6433.idx
src/cFiles/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  pipeline.cpp  pipeline.h  scene.cpp  scene.h  shaderUtil.cpp  shaderUtil.h  tm.cpp  tm.h
src/cFiles/primatives/: m33.cpp  m33.h  m44.cpp  m44.h  v3.cpp  v3.h  v4.cpp  v4.h
src/shaders/: fragmentShader.glsl  vertexShader.glsl
